# parallel_fftw

./: CMakeLists.txt  README.md  main.c  main.cpp  main_seq.c
